fixed text alignment

--- a/menustyle.css
+++ b/menustyle.css
@@ -7,7 +7,7 @@
 
 @font-face {
   font-family: bggfont;
-  src: url(Apercu/Apercu_Regular.otf);
+  src: url(Apercu/apercu_regular_pro.otf);
 }
 
 
